--- a/template/home.html
+++ b/template/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ .Title }}</title>
+    <title>Bowery-Golang Meetup</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -13,7 +13,7 @@
 
 {{ template "header" }}
 
-{{ template "home_content" }}
+{{ template "home_content" . }}
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
