--- a/template/404.html
+++ b/template/404.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    body {
+        text-align: center;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <title>Not found</title>
 </head>
 <body>
-<h1>You proprly enter the wrong page. <br/>Let me guide you back to <a href="/">life</a></h1>
+<h1>You probably enter the wrong page. <br/><a href="/">Back</a></h1>
 <img src="/assets/img/404.png"/>
 </body>
 </html>
